# chat-ssh

./: .gitignore  README.md  code-skill.skill  index.html  package-lock.json  package.json
docs/: gmssh_integration_plan.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: initial.sql
src-tauri/src/: deepseek.rs  lib.rs  main.rs  ssh_manager.rs  xshell.rs
src/assets/: knowledge.json  main.css
src/components/: AddServerModal.vue  AiChatBox.vue  AiDiagnosisModal.vue  DashboardOverview.vue  DockerView.vue  FileBrowser.vue  FirewallView.vue  InputModal.vue  PasswordPromptModal.vue  ProcessView.vue  ServerManagement.vue  ServerSidebar.vue  ServerWorkspace.vue  ServicesView.vue  SettingsModal.vue
src/components/ui/: ConfirmDialog.vue  ConflictModal.vue  ToastContainer.vue
src/stores/: knowledge.ts  scripts.ts  server.ts  settings.ts  ui.ts
src/views/: OpsView.vue  TerminalView.vue
